testsuite/tests/saks/should_fail/T16727b.hs
{-# LANGUAGE StandaloneKindSignatures #-}

module T16727b where

type T :: T
data T
